--- a/lesson 2/design.css
+++ b/lesson 2/design.css
@@ -9,3 +9,21 @@ h2 {
     font-family: 'Montserrat', sans-serif;
     font-weight: 400;
 }
+@media only screen and (min-width: 37.5 em) {
+    main {
+        grid-template-column: 1fr 1fr;
+    }
+
+        section:nth-child(3) {
+            grid-colunm:span 2;
+        }
+}
+@media only screen and (min-width: 60 em) {
+    main {
+        grid-template-column: 1fr 1fr 1fr;
+    }
+
+        section:nth-child(3) {
+            grid-colunm:span 1;
+        }
+}
